--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.0.1",
     "next": "latest",
+    "next-sanity": "^3.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -16,7 +18,7 @@
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.0.0",
     "typescript": "4.9.4"
   }
 }
