--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@portabletext/react": "^2.0.0",
+    "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
     "next": "latest",
     "next-sanity": "^3.1.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.1",
+    "react-portable-text": "^0.5.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
