--- a/sanitynextblog/tsconfig.json
+++ b/sanitynextblog/tsconfig.json
@@ -15,6 +15,6 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
+  "include": ["**/*.ts", "**/*.tsx", "schemas/author.ts"],
   "exclude": ["node_modules"]
 }
