--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    
+    "@sanity/cli": "^3.1.2",
+    "@sanity/vision": "^3.0.0",
     "@portabletext/react": "^2.0.0",
     "@sanity/client": "^3.4.1",
     "@sanity/image-url": "^1.0.1",
@@ -14,9 +17,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.1",
-    "react-portable-text": "^0.5.1"
+    "react-portable-text": "^0.5.1",
+    "sanity": "^3.0.0",
+    "styled-components": "^5.2.0"
+    
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^2.0.1",
+    "eslint": "^8.6.0",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
